--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,33 +11,33 @@
     <div class="main">
       <div class="calculator">
         <div class="screen">
-          <div class="screen-last">s1</div>
-          <div class="screen-current">0</div>
+          <div class="screen-last" id="lastOperationScreen">s1</div>
+          <div class="screen-current" id="currentOperationScreen"></div>
         </div>
 
         <div class="button-grid">
-          <button class="btn btn-blue span-2">Clear</button>
-          <button class="btn btn-red span-2">Delete</button>
+          <button class="btn btn-blue span-2" id="clearBtn">Clear</button>
+          <button class="btn btn-red span-2" id ="deleteBtn">Delete</button>
 
-          <button class="btn">7</button>
-          <button class="btn">8</button>
-          <button class="btn">9</button>
-          <button class="btn">÷</button>
+          <button class="btn " id="btn7" data-number>7</button>
+          <button class="btn" data-number>8</button>
+          <button class="btn" data-number>9</button>
+          <button class="btn" data-operator>÷</button>
 
-          <button class="btn">4</button>
-          <button class="btn">5</button>
-          <button class="btn">6</button>
-          <button class="btn">*</button>
+          <button class="btn" data-number>4</button>
+          <button class="btn" data-number>5</button>
+          <button class="btn" data-number>6</button>
+          <button class="btn" data-operator>*</button>
 
-          <button class="btn">1</button>
-          <button class="btn">2</button>
-          <button class="btn">3</button>
-          <button class="btn">-</button>
+          <button class="btn" data-number>1</button>
+          <button class="btn" data-number>2</button>
+          <button class="btn" data-number>3</button>
+          <button class="btn" data-operator>-</button>
 
-          <button class="btn">.</button>
-          <button class="btn">0</button>
-          <button class="btn">=</button>
-          <button class="btn">+</button>
+          <button class="btn" id ="pointBtn" data-number>.</button>
+          <button class="btn" data-number>0</button>
+          <button class="btn" id="equalBtn">=</button>
+          <button class="btn" data-operator>+</button>
         </div>
       </div>
     </div>
