--- a/calculator/index.html
+++ b/calculator/index.html
@@ -34,7 +34,7 @@
           <button class="btn" data-number>3</button>
           <button class="btn" data-operator>-</button>
 
-          <button class="btn" id ="pointBtn" data-number>.</button>
+          <button class="btn" id ="pointBtn">.</button>
           <button class="btn" data-number>0</button>
           <button class="btn" id="equalBtn">=</button>
           <button class="btn" data-operator>+</button>
