--- a/calculator/index.html
+++ b/calculator/index.html
@@ -11,7 +11,7 @@
     <div class="main">
       <div class="calculator">
         <div class="screen">
-          <div class="screen-last" id="lastOperationScreen">s1</div>
+          <div class="screen-last" id="lastOperationScreen"></div>
           <div class="screen-current" id="currentOperationScreen"></div>
         </div>
 
@@ -41,6 +41,9 @@
         </div>
       </div>
     </div>
+    <footer class ="copy-right">Copyright © <script>  document.write(new Date().getFullYear())
+    </script> <a href="https://github.com/Xhinsoo" target="_blank" class ="github">
+      Xhinsoo </a></footer>
 
     <script src="calc.js" defer></script>
   </body>
