--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
           <button class="btn btn-blue span-2" id="clearBtn">Clear</button>
           <button class="btn btn-red span-2" id ="deleteBtn">Delete</button>
 
-          <button class="btn " id="btn7" data-number>7</button>
-          <button class="btn" data-number>8</button>
-          <button class="btn" data-number>9</button>
-          <button class="btn" data-operator>÷</button>
+          <button class="btn" data-number="7">7</button>
+          <button class="btn" data-number="8">8</button>
+          <button class="btn" data-number="9">9</button>
+          <button class="btn" data-operator="/">÷</button>
 
-          <button class="btn" data-number>4</button>
-          <button class="btn" data-number>5</button>
-          <button class="btn" data-number>6</button>
-          <button class="btn" data-operator>*</button>
+          <button class="btn" data-number="4">4</button>
+          <button class="btn" data-number="5">5</button>
+          <button class="btn" data-number="6">6</button>
+          <button class="btn" data-operator="*">*</button>
 
-          <button class="btn" data-number>1</button>
-          <button class="btn" data-number>2</button>
-          <button class="btn" data-number>3</button>
-          <button class="btn" data-operator>-</button>
+          <button class="btn" data-number="1">1</button>
+          <button class="btn" data-number="2">2</button>
+          <button class="btn" data-number="3">3</button>
+          <button class="btn" data-operator="-">-</button>
 
           <button class="btn" id ="pointBtn">.</button>
-          <button class="btn" data-number>0</button>
-          <button class="btn" id="equalBtn">=</button>
-          <button class="btn" data-operator>+</button>
+          <button class="btn" data-number="0">0</button>
+          <button class="btn" id ="equalBtn">=</button>
+          <button class="btn" data-operator="+">+</button>
         </div>
       </div>
     </div>
